# pdfrip

./: CUDA_SUPPORT.md  Cargo.toml  GPU_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  README.md
crates/cli-interface/: Cargo.toml
crates/cli-interface/src/: arguments.rs  lib.rs
crates/cracker/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: cuda_gpu.rs  gpu.rs  lib.rs  metal_gpu.rs
crates/producer/src/: custom_query.rs
