[package]
name = "engine"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
producer.workspace = true
cracker.workspace = true
log.workspace = true
anyhow.workspace = true
crossbeam.workspace = true
md5.workspace = true
sha2.workspace = true
ocl = { version = "0.19", optional = true }
cudarc = { version = "0.12", features = ["driver", "cuda-version-from-build-system"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }

[features]
default = []
gpu = ["ocl"]
metal-gpu = ["metal", "objc"]
cuda-gpu = ["cudarc"]
